feat: add endpoint to return all available trading centers
