# docs/swagger.json
@@ -4,6 +4,35 @@
         "contact": {}
     },
     "paths": {
+        "/api/trading-centers": {
+            "get": {
+                "description": "Get all trading centers",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "trading_centers"
+                ],
+                "summary": "Get trading centers",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPSuccessResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/{tradingCenter}/config": {
             "get": {
                 "description": "Get the configuration of the API",
